--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,53 +1,38 @@
 {{> header }}
 <div class="container">
+    <div class="form-control">
+        {{#if errors}}
+        {{#each errors}}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{this.msg}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {{/each}}
+        {{/if}}
+        <h2>{{title}}</h2>
+        <form method="POST" action="/register">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" placeholder="Enter Username">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="email" placeholder="Enter Email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" placeholder="Enter Password">
+            </div>
+            <div class="form-group">
+                <label for="password1">Re-Enter Password</label>
+                <input type="password" class="form-control" name="rpass" placeholder="Enter Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
 
-<!-- <div class="z-depth-3"> -->
-
-
-<div class="card-panel">
-  <h3 class="header" style="color: #ee6e73;">{{title}}</h3>
-   <form class="col s12">
-     <div class="row">
-       <div class="input-field col s6">
-         <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-         <label for="first_name">First Name</label>
-       </div>
-       <div class="input-field col s6">
-         <input id="last_name" type="text" class="validate">
-         <label for="last_name">Last Name</label>
-       </div>
-     </div>
-     <div class="row">
-       <div class="input-field col s12">
-         <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-         <label for="disabled">Disabled</label>
-       </div>
-     </div>
-     <div class="row">
-       <div class="input-field col s12">
-         <input id="password" type="password" class="validate">
-         <label for="password">Password</label>
-       </div>
-     </div>
-     <div class="row">
-       <div class="input-field col s12">
-         <input id="email" type="email" class="validate">
-         <label for="email">Email</label>
-       </div>
-     </div>
-     <div class="row">
-       <div class="col s12">
-         This is an inline input field:
-         <div class="input-field inline">
-           <input id="email_inline" type="email" class="validate">
-           <label for="email_inline">Email</label>
-           <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
-         </div>
-       </div>
-     </div>
-   </form>
- </div>
-
+    </div>
 </div>
-</div>
+
 {{> footer-end }}
