--- a/views/partials/footer-end.hbs
+++ b/views/partials/footer-end.hbs
@@ -1,11 +1,27 @@
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+<footer class="footer">
+  <!-- <div class="container"> -->
+  <div style="display: flex; justify-content: space-around">
+    <div class="">
+      <span>Copyright ©Riverway Inc. All rights reserved.</span>
+    </div>
+    <div>
+      <a href="http://facebook.com" target="_blank"><i class="fa fa-facebook" style="color: #3B5998;"></i></a>
+      <a href="http://twitter.com" target="_blank"><i class="fa fa-twitter" style="color: #55ACEE;"></i></a>
+      <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin" style="color: #007bb5;"></i></a>
+      <a href="http://plus.google.com" target="_blank"><i class="fa fa-google-plus" style="color: #dd4b39;"></i></a>
+    </div>
+  </div>
+  <!-- </div> -->
+</footer>
+</body>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+  e.src='https://www.google-analytics.com/analytics.js';
+  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+  ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+  </script>
+</body>
 </html>
