--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,30 @@
-body {
-  margin: 0; }
+html {
+  position: relative;
+  min-height: 100%;
+}
 
-/*# sourceMappingURL=style.css.map*/
+body {
+  margin-bottom: 60px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
