added redis for user/cookie

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,38 +1,66 @@
 {{> header }}
 <div class="container">
-    <div class="form-control">
-        {{#if errors}}
-        {{#each errors}}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            {{this.msg}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        {{/each}}
-        {{/if}}
-        <h2>{{title}}</h2>
-        <form method="POST" action="/register">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" placeholder="Enter Username">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" name="email" placeholder="Enter Email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" placeholder="Enter Password">
-            </div>
-            <div class="form-group">
-                <label for="password1">Re-Enter Password</label>
-                <input type="password" class="form-control" name="rpass" placeholder="Enter Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
+  <div class="form-control">
+    {{#if errors}}
+    {{#each errors}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{this.msg}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
+    {{/each}}
+    {{/if}}
+    {{#if error_p}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{error_p}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {{/if}}
+    <h2>{{title}}</h2>
+    <form method="POST" action="/register">
+      <div class="form-group">
+        <label for="username">Name</label>
+        <input type="text" class="form-control" name="name" placeholder="Enter Full Name">
+      </div>
+      <div class="form-group">
+        <label for="username">Pseudoname</label>
+        <input type="text" class="form-control" name="pseudoname" placeholder="Enter Pseudoname">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" name="email" placeholder="Enter Email">
+      </div>
+      <div class="form-group">
+        <label for="email">Phone</label>
+        <input type="text" class="form-control" name="phone" placeholder="Enter Phone Number">
+      </div>
+      <!-- <div class="row">
+        <div class="col-sm-9">
+          <select class="form-control" id="teams" name="teams">
+            <option value="" disabled="" selected="">Please select the Team</option>
+            <option value="{{team.teamName}}">{{team.teamName}}</option>
+          </select>
+          <p ng-show="registerForm.teams.$invalid && !registerForm.teams.$pristine" class="help-block">Team is required</p>
+        </div>
+        <div class="col-sm-3">
+          <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal"> Add </button>
+        </div>
+      </div> -->
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Enter Password">
+      </div>
+      <div class="form-group">
+        <label for="password1">Re-Enter Password</label>
+        <input type="password" class="form-control" name="rpass" placeholder="Enter Password">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+  </div>
 </div>
 
 {{> footer-end }}
