--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,9 @@
 {{> header }}
 <div class="container">
   <h1>{{title}}</h1>
+  <p>pseudoname: {{pseudoname}}</p>
   <p>Email: {{email}}</p>
+  <p>name: {{name}}</p>
   <p>Welcome to {{title}}</p>
 </div>
 
