--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,27 +1,37 @@
 {{> header }}
 
-<div class="container">
-  <div class="form-control">
-    <h2>{{title}}</h2>
-    {{#if errormsg}}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{errormsg}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
     </div>
-    {{/if}}
-    <form method="POST" action="/login">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" name="username" placeholder="Enter Username">
+
+    <div class="col">
+      <div class="form-control">
+        <h2>{{title}}</h2>
+        {{#if errormsg}}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          {{errormsg}}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {{/if}}
+        <form method="POST" action="/login">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" name="username" placeholder="Enter Username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Enter Password">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" placeholder="Enter Password">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
+
+    <div class="col">
+    </div>
   </div>
 </div>
 
