--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,12 +18,16 @@
         {{/if}}
         <form method="POST" action="/login">
           <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">pseudoname</label>
             <input type="text" class="form-control" name="username" placeholder="Enter Username">
           </div>
           <div class="form-group">
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" placeholder="Enter Password">
+          </div>
+          <div class="form-group">
+            <label for="eventname">Event Name</label>
+            <input type="text" class="form-control" name="eventname" placeholder="Enter Eventname">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
