--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -43,7 +43,7 @@
         </li>
         {{#if auth}}
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+          <a class="nav-link" href="/home">Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
@@ -52,5 +52,3 @@
       </ul>
     </div>
   </nav>
-
-  <br>
