--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,16 @@
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+  height: 100%;
+  /* margin-bottom: 60px; */
+}
+
+#map {
+  width: 100%;
+  height: calc(100% - 116px);
 }
 
 .fa {
