--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -46,9 +46,15 @@
           <a class="nav-link" href="/home">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="/logout" onclick="logout()">Logout</a>
         </li>
         {{/if}}
       </ul>
     </div>
   </nav>
+<script type="text/javascript">
+  function logout(){
+    var socket = io.connect();
+    socket.disconnect();
+  }
+</script>
