--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,17 +13,46 @@ body {
   height: calc(100% - 116px);
 }
 
+.customMarker {
+  position: absolute;
+  cursor: pointer;
+  background: rgb(73, 131, 238, 0.7);
+  width: 50px;
+  height: 50px;
+  margin-left: -25px;
+  margin-top: -65px;
+  border-radius: 100%;
+  padding: 0px;
+}
+.customMarker:after {
+  content:"";
+  position: absolute;
+  bottom: -8px;
+  left: 15px;
+  border-width: 10px 10px 0;
+  border-style: solid;
+  border-color: rgb(73, 131, 238, 0.5) transparent;
+  display: block;
+  width: 0;
+}
+.customMarker img {
+  width:40px;
+  height:40px;
+  margin:5px;
+  border-radius:100%;
+}
+
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
 }
 
 /* Add a hover effect if you want */
 .fa:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .footer {
