--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,16 @@ html {
 
 body {
   height: 100%;
-  /* margin-bottom: 60px; */
 }
 
 #map {
   width: 100%;
   height: calc(100% - 116px);
+}
+
+.container-fluid {
+  width: 100% !important;
+  height: calc(100% - 116px) !important;
 }
 
 .customMarker {
@@ -50,13 +54,12 @@ body {
   text-decoration: none;
 }
 
-/* Add a hover effect if you want */
 .fa:hover {
   opacity: 0.7;
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px;
