--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -31,32 +31,28 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
+        {{#if auth}}
+        <!-- <li class="nav-item">
+        <a class="nav-link" href="/logout" onclick="logout()">Logout</a>
+      </li> -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{pseudoname}}</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="/logout">Logout</a>
+          </div>
+        </li>
+        {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/register">Register</a>
         </li>
-        {{#if auth}}
-        <li class="nav-item">
-          <a class="nav-link" href="/home">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
-        </li>
         {{/if}}
       </ul>
     </div>
   </nav>
-  <script type="text/javascript">
-  function logout(){
-    var socket = io.connect();
-    $.getJSON("/api/user", function(data) {
-      socket.emit('disconnect', data.user['pseudoname']);
-    });
-  }
-</script>
